fixed title overlaped on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     justify-content: center;
 }
 .gameLogo{
+    max-width: 100%;
     width: 28.125rem;
 }
 
@@ -13,6 +14,7 @@
     margin-bottom: 3rem;
 }
 .gameIcon{
+    max-width: 100%;
     margin-right: 3rem;
     height: 30%;
 }
